<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="de.pantrycook.pantryview.RecipeListActivity$PlaceholderFragment" 
    android:orientation="vertical">
    
   <Button
        android:id="@+id/viewRecipes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/viewRecipeButton"
        android:onClick="openRecipeListView" />

    <Button
        android:id="@+id/addRecipe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addRecipeSingleButton" 
        android:onClick="openAddView"/>

    <Button
        android:id="@+id/mealPlan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mealPlan" 
        android:onClick="openMealPlanView"/>

</LinearLayout>
