<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="de.pantrycook.pantryview.StartScreen$PlaceholderFragment" 
    >

    <Button
        android:id="@+id/button_recipes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/access_recipe_list" 
        android:onClick="openRecipeList"
        />
    
     <Button
        android:id="@+id/button_shoppingList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/access_shopping_list" 
        android:onClick="openShoppingList"
        />

      <Button
        android:id="@+id/button_pantry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/access_pantry" 
        android:onClick="openPantryView"
        />
      
</LinearLayout>